<?xml version="1.0"?>
<package format="2">
  <name>ros_whill</name>
  <version>2.0.0</version>
  <description>The ros_whill package for ROS2</description>

  <maintainer email="biao876990970@hotmail.com">biao</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
