<?xml version="1.0"?>
<package format="3">
  <name>ros_whill</name>
  <version>2.0.0</version>
  <description>The ros_whill package for ROS2</description>

  <maintainer email="biao876990970@hotmail.com">biao</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
